// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should render the input by default and match snapshot 1`] = `
.c0 {
  border-radius: 0 0.3em 0.3em 0;
  border: 0.1em solid black;
  border-left: none;
  outline: none;
  padding: 0.5em;
}

@media (min-width:768px) {
  .c0 {
    width: 85%;
  }
}

<input
  aria-label="Input"
  class="c0"
  placeholder="Type here to chat"
/>
`;

exports[`<Input /> should render the nickname input and match snapshot 1`] = `
.c0 {
  border-radius: 0 0.3em 0.3em 0;
  border: 0.1em solid black;
  border-left: none;
  outline: none;
  padding: 0.5em;
  border-radius: 0.3em 0 0 0.3em;
  border-right: none;
  border-left: 0.1em solid black;
  color: white;
  cursor: pointer;
  margin-right: -0.1em;
  width: 6em;
}

.c0::-webkit-input-placeholder {
  color: black;
  font-weight: 600;
  opacity: 1;
  text-align: center;
}

.c0::-moz-placeholder {
  color: black;
  font-weight: 600;
  opacity: 1;
  text-align: center;
}

.c0:-ms-input-placeholder {
  color: black;
  font-weight: 600;
  opacity: 1;
  text-align: center;
}

.c0::placeholder {
  color: black;
  font-weight: 600;
  opacity: 1;
  text-align: center;
}

@media (min-width:768px) {
  .c0 {
    width: 85%;
  }
}

@media (min-width:768px) {
  .c0 {
    width: 6em;
  }
}

<input
  aria-label="Input"
  class="c0"
  placeholder="Type here to chat"
/>
`;
